--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,9 @@ jobs:
         with:
           ruby-version: .ruby-version
           bundler-cache: true
-
+      - name: Ensure bin scripts are executable
+        run: chmod +x bin/*
+        
       - name: Scan for security vulnerabilities in JavaScript dependencies
         run: bin/importmap audit
 
