--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,7 @@ jobs:
         with:
           ruby-version: .ruby-version
           bundler-cache: true
+          
       - name: Ensure bin scripts are executable
         run: chmod +x bin/*
         
@@ -52,6 +53,9 @@ jobs:
           ruby-version: .ruby-version
           bundler-cache: true
 
+      - name: Ensure bin scripts are executable
+        run: chmod +x bin/*
+    
       - name: Lint code for consistent style
         run: bin/rubocop -f github
 
@@ -77,6 +81,9 @@ jobs:
           ruby-version: .ruby-version
           bundler-cache: true
 
+      - name: Ensure bin scripts are executable
+        run: chmod +x bin/*
+        
       - name: Run tests
         env:
           RAILS_ENV: test
