--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,11 +39,11 @@ jobs:
           ruby-version: .ruby-version
           bundler-cache: true
           
-      - name: Ensure bin scripts are executable
-        run: chmod +x bin/*
-        
+      - name: Install dependencies
+        run: bundle install
+
       - name: Scan for security vulnerabilities in JavaScript dependencies
-        run: bin/importmap audit
+        run: bundle exec importmap audit
 
   lint:
     runs-on: ubuntu-latest
