--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
         run: bundle install
 
       - name: Run importmap audit
-        run: bundle exec importmap audit
+        run: bundle exec rails importmap:audit
 
   lint:
     runs-on: ubuntu-latest
