--- a/config/database.yml
+++ b/config/database.yml
@@ -10,8 +10,13 @@ development:
   database: blog_app_development
 
 test:
-  <<: *default
+  adapter: mysql2
+  encoding: utf8mb4
   database: blog_app_test
+  username: root
+  password: root
+  host: 127.0.0.1
+  port: 3306
 
 production:
   <<: *default
