--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,8 +60,8 @@ jobs:
       - name: Ensure bin scripts are executable
         run: chmod +x bin/*
     
-      - name: Lint code for consistent style
-        run: bin/rubocop -f github
+      - name: Run RuboCop
+        run: bundle exec rubocop -f github
 
   test:
     runs-on: ubuntu-latest
